--- a/public/views/main-menu.html
+++ b/public/views/main-menu.html
@@ -11,6 +11,7 @@
                 <li class="list-group-item"><a href="/views/attribute_manager.html">Аттрибуты</a></li>
                 <li class="list-group-item"><a href="/views/merit_manager.html">Достоинства</a></li>
                 <li class="list-group-item"><a href="/views/inherent_manager.html">Врожденные особенности</a></li>
+                <li class="list-group-item"><a href="/views/flaw_manager.html">Недостатки</a></li>
                 <li class="list-group-item"><a href="/">Персонажи</a></li>
             </ul>
         </div>
