--- a/public/views/race.html
+++ b/public/views/race.html
@@ -13,6 +13,7 @@
 <div data-ng-include data-src="'main-menu.html'"></div>
 <div ng-controller="raceAttributeListController">
     <h2 class="text-center">{{race.name}}</h2>
+
     <h3 class="text-center">Аттрибуты</h3>
     <table class="table table-striped">
         <tr ng-repeat="raceAttribute in raceAttributes | orderBy : 'Attribute.name'">
@@ -52,13 +53,16 @@
 
 <div class="container">
     <h2>Привязать достоинство</h2>
+
     <form class="form-horizontal" role="form" ng-controller="addRaceMeritController"
           name="addRaceMeritForm">
         <div class="form-group">
             <label class="control-label col-sm-2" for="merit_id">Достоинство: </label>
+
             <div class="col-sm-10">
                 <select class="form-control"
-                        ng-model="merit_id" id="merit_id" ng-options="merit.id as merit.name for merit in merits" required>
+                        ng-model="merit_id" id="merit_id" ng-options="merit.id as merit.name for merit in merits"
+                        required>
                     <option style="display:none" value="">Выберите достоинство...</option>
                 </select>
             </div>
@@ -66,22 +70,28 @@
 
         <div class="form-group">
             <label class="control-label col-sm-2" for="race_cost">Расовая стоимость:</label>
+
             <div class="col-sm-10">
-                <input type="number" class="form-control" id="race_cost" ng-disabled="isCheckboxChecked()" ng-model="race_cost" min="0">
+                <input type="number" class="form-control" id="race_cost" ng-disabled="isCheckboxChecked()"
+                       ng-model="race_cost" min="0">
             </div>
         </div>
 
         <div class="form-group">
             <label class="control-label col-sm-2" for="race_default">По умолчанию:</label>
+
             <div class="col-sm-10">
-                <input type="checkbox" class="form-control" id="race_default" ng-model="race_default">
+                <div class="pull-left">
+                    <input type="checkbox" class="form-control" id="race_default" ng-model="race_default">
+                </div>
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
                 <button type="submit" class="btn btn-default" ng-click="createRaceMerit()"
-                        ng-disabled="addRaceMeritForm.$invalid">Привязать</button>
+                        ng-disabled="addRaceMeritForm.$invalid">Привязать
+                </button>
             </div>
         </div>
     </form>
@@ -103,13 +113,16 @@
 
 <div class="container">
     <h2>Привязать врожденное</h2>
+
     <form class="form-horizontal" role="form" ng-controller="addRaceInherentController"
           name="addRaceInherentForm">
         <div class="form-group">
             <label class="control-label col-sm-3" for="inherent_id">Достоинство: </label>
+
             <div class="col-sm-8">
                 <select class="form-control"
-                        ng-model="inherent_id" id="inherent_id" ng-options="inherent.id as inherent.name for inherent in inherents" required>
+                        ng-model="inherent_id" id="inherent_id"
+                        ng-options="inherent.id as inherent.name for inherent in inherents" required>
                     <option style="display:none" value="">Выберите достоинство...</option>
                 </select>
             </div>
@@ -117,6 +130,7 @@
 
         <div class="form-group">
             <label class="control-label col-sm-3" for="race_probability">Расовая вероятность 1/x:</label>
+
             <div class="col-sm-8">
                 <input type="number" class="form-control" id="race_probability" ng-model="race_probability" min="0">
             </div>
@@ -125,7 +139,8 @@
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
                 <button type="submit" class="btn btn-default" ng-click="createRaceInherent()"
-                        ng-disabled="addRaceInherentForm.$invalid">Привязать</button>
+                        ng-disabled="addRaceInherentForm.$invalid">Привязать
+                </button>
             </div>
         </div>
     </form>
@@ -147,10 +162,12 @@
 
 <div class="container">
     <h2>Привязать недостаток</h2>
+
     <form class="form-horizontal" role="form" ng-controller="addRaceFlawController"
           name="addRaceFlawForm">
         <div class="form-group">
             <label class="control-label col-sm-3" for="flaw_id">Недостаток: </label>
+
             <div class="col-sm-8">
                 <select class="form-control"
                         ng-model="flaw_id" id="flaw_id" ng-options="flaw.id as flaw.name for flaw in flaws" required>
@@ -162,7 +179,8 @@
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
                 <button type="submit" class="btn btn-default" ng-click="createRaceFlaw()"
-                        ng-disabled="addRaceFlawForm.$invalid">Привязать</button>
+                        ng-disabled="addRaceFlawForm.$invalid">Привязать
+                </button>
             </div>
         </div>
     </form>
@@ -187,7 +205,7 @@
         $scope.show = function (id) {
             var show = false;
             angular.forEach(changingAttributeIds, function (changingAttributeId) {
-                if(changingAttributeId == id) {
+                if (changingAttributeId == id) {
                     show = true;
                 }
             });
