--- a/public/views/flaw_manager.html
+++ b/public/views/flaw_manager.html
@@ -44,6 +44,16 @@
         </div>
 
         <div class="form-group">
+            <label class="control-label col-sm-2" for="unremovable">Неотключаемый:</label>
+
+            <div class="col-sm-10">
+                <div class="pull-left">
+                    <input type="checkbox" class="form-control" id="unremovable" ng-model="unremovable">
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
             <label class="control-label col-sm-2" for="description">Описание:</label>
             <div class="col-sm-10">
                 <input type="text" ng-model="description" class="form-control" id="description" placeholder="Описание здесь">
@@ -70,10 +80,13 @@
     var app = angular.module("flawManagerApp", []);
 
     app.controller("addFlawController", function ($scope, $http) {
+        $scope.unremovable = false;
+
         $scope.createFlaw = function () {
             $http.post('/flaws', {
                 name: $scope.flaw_name,
                 cost: $scope.cost,
+                unremovable: unremovable,
                 description: $scope.description,
                 action_level_bonus: $scope.action_level_bonus
             }).success(function (data) {
