--- a/public/views/flaw_manager.html
+++ b/public/views/flaw_manager.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Список достоинств</title>
+    <title>Список недостатков</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -24,12 +24,12 @@
 </div>
 
 <div class="container">
-    <h2>Добавить достоинство</h2>
+    <h2>Добавить недостаток</h2>
     <form class="form-horizontal" role="form" ng-controller="addFlawController"
           name="createFlawForm">
 
         <div class="form-group">
-            <label class="control-label col-sm-2" for="flaw_name">Название достоинства:</label>
+            <label class="control-label col-sm-2" for="flaw_name">Название недостатка:</label>
             <div class="col-sm-10">
                 <input type="text" ng-model="flaw_name" class="form-control" id="flaw_name" placeholder="Морская болезнь" required>
             </div>
